--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "eslint-plugin-react": "^7.33.2",
     "jest": "^29.7.0",
     "nodemon": "^3.0.1",
-    "prettier": "3.0.3",
+    "prettier": "^3.0.3",
     "supertest": "^6.3.3"
   },
   "config": {
