--- a/package.json
+++ b/package.json
@@ -1,47 +1,47 @@
 {
-  "name": "devops-mini-proj-tdd-greetings",
-  "version": "1.0.0",
-  "type": "module",
-  "description": "Mini projet devops: Hello world",
-  "main": "greeting.js",
-  "scripts": {
-    "prettier": "prettier --check .",
-    "prettier:fix": "prettier --write .",
-    "lint": "eslint .",
-    "lint:fix": "eslint --fix .",
-    "code:fix": "prettier --write . && eslint --fix .",
-    "commit": "cz",
-    "test": "jest --coverage",
-    "test:watch": "jest --watchAll"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/julien-remmery-vinci/devops-mini-proj-tdd-greetings.git"
-  },
-  "author": "Julien Remmery, Henry Obedekah",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/julien-remmery-vinci/devops-mini-proj-tdd-greetings/issues"
-  },
-  "homepage": "https://github.com/julien-remmery-vinci/devops-mini-proj-tdd-greetings#readme",
-  "devDependencies": {
-    "eslint": "^8.53.0",
-    "eslint-config-standard": "^17.1.0",
-    "eslint-plugin-import": "^2.29.0",
-    "eslint-plugin-n": "^16.3.1",
-    "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-react": "^7.33.2",
-    "jest": "^29.7.0",
-    "nodemon": "^3.0.1",
-    "prettier": "^3.0.3",
-    "supertest": "^6.3.3"
-  },
-  "config": {
-    "commitizen": {
-      "path": "cz-conventional-changelog"
+    "name": "devops-mini-proj-tdd-greetings",
+    "version": "1.0.0",
+    "type": "commonjs",
+    "description": "Mini projet devops: Hello world",
+    "main": "greeting.js",
+    "scripts": {
+        "prettier": "prettier --check .",
+        "prettier:fix": "prettier --write .",
+        "lint": "eslint .",
+        "lint:fix": "eslint --fix .",
+        "code:fix": "prettier --write . && eslint --fix .",
+        "commit": "cz",
+        "test": "jest --coverage",
+        "test:watch": "jest --watchAll"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/julien-remmery-vinci/devops-mini-proj-tdd-greetings.git"
+    },
+    "author": "Julien Remmery, Henry Obedekah",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/julien-remmery-vinci/devops-mini-proj-tdd-greetings/issues"
+    },
+    "homepage": "https://github.com/julien-remmery-vinci/devops-mini-proj-tdd-greetings#readme",
+    "devDependencies": {
+        "eslint": "^8.53.0",
+        "eslint-config-standard": "^17.1.0",
+        "eslint-plugin-import": "^2.29.0",
+        "eslint-plugin-n": "^16.3.1",
+        "eslint-plugin-promise": "^6.1.1",
+        "eslint-plugin-react": "^7.33.2",
+        "jest": "^29.7.0",
+        "nodemon": "^3.0.1",
+        "prettier": "^3.0.3",
+        "supertest": "^6.3.3"
+    },
+    "config": {
+        "commitizen": {
+            "path": "cz-conventional-changelog"
+        }
+    },
+    "dependencies": {
+        "test": "^3.3.0"
     }
-  },
-  "dependencies": {
-    "test": "^3.3.0"
-  }
 }
