--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
         "code:fix": "prettier --write . && eslint --fix .",
         "commit": "cz",
         "test": "jest --coverage",
-        "test:watch": "jest --watchAll"
+        "test:watch": "jest --watchAll",
+        "build": "webpack ./greeting.js --mode=development"
     },
     "repository": {
         "type": "git",
@@ -34,7 +35,8 @@
         "jest": "^29.7.0",
         "nodemon": "^3.0.1",
         "prettier": "^3.0.3",
-        "supertest": "^6.3.3"
+        "supertest": "^6.3.3",
+        "webpack": "^5.89.0"
     },
     "config": {
         "commitizen": {
