--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -27,3 +27,6 @@ jobs:
       
     - name: Run test coverage
       run: npm run test
+      
+    - name: Build the project
+      run: npm run build
