--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
         "nodemon": "^3.0.1",
         "prettier": "^3.0.3",
         "supertest": "^6.3.3",
-        "webpack": "^5.89.0"
+        "webpack": "^5.89.0",
+        "webpack-cli": "^5.1.4"
     },
     "config": {
         "commitizen": {
