CI: add coverage must be higher than 80%

--- a/package.json
+++ b/package.json
@@ -46,5 +46,16 @@
     },
     "dependencies": {
         "test": "^3.3.0"
+    },
+    "jest": {
+    "coverageThreshold": {
+      "global": {
+        "branches": 80,
+        "functions": 80,
+        "lines": 80,
+        "statements": 80
+      }
     }
+  }
+  }
 }
